[package]
name = "shunt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shunt"
path = "src/main.rs"

[lib]
name = "shunt"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
bytes = "1"
futures-util = "0.3"
http = "1"
tower = "0.4"
rpassword = "7"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1.3"
hex = "0.4.3"
url = "2.5.8"
libc = "0.2.185"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
