[package]
name = "shunt-proxy"
version = "0.1.17"
edition = "2021"
authors = ["Ramcharan <sairamcharansudagoni@gmail.com>"]
description = "A local proxy that pools multiple Claude accounts behind a single endpoint, routing requests to maximise rate limits"
license = "MIT"
repository = "https://github.com/ramc10/shunt"
homepage = "https://github.com/ramc10/shunt"
readme = "README.md"
keywords = ["claude", "anthropic", "proxy", "rate-limit", "llm"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".github/", "tests/"]

[[bin]]
name = "shunt"
path = "src/main.rs"

[lib]
name = "shunt"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
bytes = "1"
futures-util = "0.3"
http = "1"
tower = "0.4"
rpassword = "7"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1.3"
hex = "0.4.3"
url = "2.5.8"
libc = "0.2.185"
crossterm = "0.27"
ratatui = "0.29"
flate2 = "1"
tar = "0.4"
aes-gcm = "0.10"
getrandom = "0.2"
toml_edit = "0.22"
unicode-width = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
